<resources>
    <string name="app_name">Stoik Cytat Quiz</string>
    <string name="start_text_to_user">Przed Tobą krótki quiz! Sprawdź czy wiesz, kto jest autorem przedstawionych tutaj myśli.</string>
    <string name="welcome_message">miło, że jesteś!</string>
    <string name="next_button">Dalej</string>
    <string name="hello_message">Cześć,</string>
    <string name="question_before_quote">question</string>
    <string name="laurel_wreath_image">laurel_wreath</string>
    <string name="message_about_result">Twój wynik na 0 z 0 pytań</string>
    <string name="finish_button_text">ZAKOŃCZ QUIZ</string>
    <string name="exclamation_mark_about_result">Twój wynik:</string>
    <string name="message_to_user_they_did_it">Gratulacje!</string>
    <string name="custom_dialog_no">NIE</string>
    <string name="custom_dialog_yes">TAK</string>
    <string name="message_based_on_result">Message based on result</string>
    <string name="Are_you_sure_you_want_quit_the_quiz">Czy na pewno chcesz zakończyć quiz?</string>
    <string name="decite_for_how_many_questions_you_are_ready">Zdecyduj na ile pytań jesteś gotowy:</string>
    <string name="settings_button">settings_button</string>
    <string name="forty_questions">40 PYTAŃ</string>
    <string name="ten_questions">10 PYTAŃ</string>
    <string name="one_question">1 pytanie</string>
    <string name="settings_dots">settings_dots</string>
    <string name="contact_icon">email_icon</string>
    <string name="rate_icon">rate_icon</string>
    <string name="privacy_policy_field">Polityka prywatności</string>
    <string name="contact_field">Kontakt</string>
    <string name="rate_field">Oceń aplikację</string>
    <string name="info_about">O aplikacji</string>
    <string name="app_version">Version 1.2</string>
    <string name="settings_in_settings">Ustawienia</string>
    <string name="app_description">O aplikacji</string>
    <string name="Are_you_sure_you_want_exit_the_app">Czy na pewno chcesz wyjść z aplikacji?</string>
    <string name="lepiej_teraz_icon">lepiej_teraz_icon</string>
    <string name="lepiej_teraz_text">Lepiej Teraz - Stoicki podcast</string>
    <string name="wygraj_dzien_icon">wygraj dzien icon</string>
    <string name="moja_aplikacja_wygraj_dzie">Moja aplikacja Wygraj Dzień</string>
</resources>