<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/settings_in_settings"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_contact"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/contact_icon"
            android:src="@drawable/contact" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/contact_field"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_privacy_policy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/contact_icon"
            android:src="@drawable/privacy" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/privacy_policy_field"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_rate"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/rate_icon"
            android:src="@drawable/rate" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/rate_field"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/rate_icon"
            android:src="@drawable/about" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/info_about"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_lepiej_teraz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_lepiej_teraz"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/lepiej_teraz_icon"
            android:src="@drawable/laurel_wreath_to_lepiej_teraz" />

        <TextView
            android:id="@+id/tv_lepiej_teraz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/lepiej_teraz_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wygraj_dzien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_wygraj_dzien"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/wygraj_dzien_icon"
            android:src="@drawable/peak_link_to_other_app" />

        <TextView
            android:id="@+id/tv_wygraj_dzien"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/moja_aplikacja_wygraj_dzie"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|center"
        android:text="@string/app_version"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp" />

</LinearLayout>