<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/message_to_user_they_did_it"
        android:textColor="?android:textColorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_laurel_wreath"
            android:layout_width="288dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/laurel_wreath_image"
            android:src="@drawable/laurel_wreath" />

        <TextView
            android:id="@+id/tv_congratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclamation_mark_about_result"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/message_about_result"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_message_based_on_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/message_based_on_result"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_border_bg"
            android:gravity="bottom|center"
            android:padding="10dp"
            android:text="@string/finish_button_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
